[package]
name = "qefro-sdk"
version = "0.1.0"
edition = "2021"
description = "Qefro backend SDK for business tool handlers"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
