[package]
name = "qefro-backend-sdk"
version = "1.0.1"
edition = "2021"
description = "Qefro backend framework for business tool handlers and customer authorization orchestration"
license = "MIT"
readme = "README.md"
homepage = "https://docs.qefro.com/docs/guides/register-sdk-business-tools"
repository = "https://github.com/qefro-ai/qefro-rust-backend-sdk"
documentation = "https://docs.rs/qefro-backend-sdk"
keywords = ["qefro", "ai", "sdk", "business-tools", "customer-support"]
categories = ["web-programming", "api-bindings"]
rust-version = "1.70"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic"
path = "examples/basic/main.rs"
